<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="Loading...please wait..."
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="157dp"
        android:layout_height="143dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/information_img" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/welcome_to_informtt"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttons"
        android:text="@string/register"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttons"
        android:text="@string/login"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnGuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttons"
        android:text="@string/continue_as_guest"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnRandom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttons"
        android:text="@string/random_knowledge"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/iv_random"
        android:layout_width="194dp"
        android:layout_height="236dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/question_mark" />

    </LinearLayout>

</LinearLayout>